# ur-gazebo-models

./: CMakeLists.txt
models/: ur16e.sdf
models/conf/: controlboard_ur16e.ini  gazebo_ur
models/ur16e/: model.config  ur16e.sdf
models/ur16e/conf/: controlboard_ur16e.ini  ur16e_nws_yarp.xml
models/ur16e/meshes/visual/: wrist2.dae:Zone.Identifier
models/ur3/: model.config  ur3.sdf
models/ur3/conf/: controlboard_ur3.ini  ur3_nws_yarp.xml
share/: CMakeLists.txt
share/contexts/kinematics/: ur16e.ini
worlds/: ur16e.world  ur3.world
